--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,9 +15,9 @@
 
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@mipmap/ic_launcher_round"
+            android:layout_height="101dp"
+            android:paddingTop="12dp"
+            app:srcCompat="@drawable/ic_education"
             android:contentDescription="@string/nav_header_desc"
             android:id="@+id/imageView"/>
 
@@ -26,11 +26,13 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="@string/nav_header_title"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nav_header_subtitle"
-            android:id="@+id/textView"/>
+            android:id="@+id/textView"
+            android:textColor="@color/white"/>
 </LinearLayout>
