--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,60 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
+                                                   android:background="@drawable/frame_kids"
                                                    tools:context=".ui.user.SignInFragment">
 
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:ems="10"
-            android:hint="User Name"
-            android:id="@+id/UserName"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="257dp"
-            android:layout_marginStart="82dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:hint="Password"
-            android:id="@+id/password"
-            app:layout_constraintStart_toStartOf="@+id/UserName"
-            android:layout_marginTop="41dp" app:layout_constraintTop_toBottomOf="@+id/UserName"/>
-    <Button
-            android:text="Sign In"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/signInButton"
-            app:layout_constraintStart_toStartOf="@+id/password"
-            android:layout_marginTop="54dp" app:layout_constraintTop_toBottomOf="@+id/password"
-            app:layout_constraintEnd_toEndOf="@+id/password"/>
 
+    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordInputLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@+id/userNameInputLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.0">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="200dp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/userNameInputLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="296dp" app:layout_constraintHorizontal_bias="0.0">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/UserName"
+                android:layout_width="200dp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:hint="User Name"
+                android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
     <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="254dp"
-            android:layout_height="71dp"
-            android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
+            android:orientation="vertical"
+            android:layout_width="190dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="68dp" app:layout_constraintTop_toBottomOf="@+id/UserName"
-            android:layout_marginBottom="116dp" app:layout_constraintVertical_bias="0.942">
+            android:layout_marginStart="68dp"
+            android:layout_marginBottom="88dp" app:layout_constraintHorizontal_bias="0.274">
+
         <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:text="Already have account?"
-        />
+                android:text="Don't have account?"/>
+
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/textButtonSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textButtonSignUp"
                 android:text="Sign Up"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-        />
+                style="@style/Widget.MaterialComponents.Button.TextButton"/>
     </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/signInButton"
+            android:layout_width="190dp"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:enabled="false"
+
+            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.502"/>
+    <TextView
+            android:text="Sign In"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:id="@+id/textView2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="27dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/userNameInputLayout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
